# TORDIT

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  architecture.md  docker-compose.yml  spec.md  team_brief.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  tor_p0_out.txt
backend/app/: checker.py  extract.py  fewshot.py  jobs.py  llm.py  main.py  pdf.py  prompt.py  reference.py  rules.py  schemas.py
backend/eval/: ground_truth.json  judge.py  pipeline.py  recall.py  run.py
backend/tests/: bench_ocr.py  test_extract.py  test_filter.py  test_jobs.py  test_llm_parsing.py  test_pdf.py  test_references.py  test_rules.py  test_schemas.py
backend/tests/fixtures/: make_sample_pdf.py
docs/02_แม่แบบและตัวอย่างมาตรฐาน/: ตัวอย่าง TOR งานจ้าง แบบย่อและเต็ม.docx  ตัวอย่าง TOR งานซื้อ แบบย่อและเต็ม.docx  แบบฟอร์ม TOR [แม่แบบ 10 หัวข้อตาม ว 159 ครอบคลุมซื้อแบบย่อและเต็ม].xlsx
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/check/[id]/: page.tsx
frontend/src/components/: FindingCard.tsx  FindingsPanel.tsx
frontend/src/lib/: mockCheck.ts
frontend/src/types/: api.ts
nginx/: nginx.conf
